Fix alignment on the genres and top_rated sections.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,12 @@ body {
 }
 
 /* ===== Genres Section ===== */
-.genres-section {
+.section-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
   background-color: #111; 
   padding: 50px 20px;
 }
@@ -78,7 +83,6 @@ body {
 }
 
 .genre-card {
-  display: inline-block;
   width: 220px;
   margin: 15px;
   background-color: #1a1a1a;
@@ -95,6 +99,7 @@ body {
 
 .genre-card img {
   width: 100%;
+  height: 230px;
   display: block;
 }
 
@@ -102,6 +107,7 @@ body {
   padding: 15px;
   text-align: center;
   background-color: #0d0d0d;
+  
 }
 
 .genre-info h3 {
@@ -111,22 +117,28 @@ body {
 }
 
 /* ===== Top Rated Section ===== */
-.top_rated {
+.top_rated-container {
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  gap: 1rem;
+  flex: 1;
   padding: 50px 20px;
   background-color: #0d0d0d;
+  margin-left: 5rem;
 }
 
 .top_rated h3 {
-  text-align: center;
   font-size: 2rem;
-  margin-bottom: 25px;
   color: #e50914;
+  text-align: center;
 }
 
 .top_rated-card {
+  text-align: center;
   display: flex;
-  align-items: center;
-  gap: 20px;
+  flex-direction: column;
+  flex-wrap: wrap;
   background-color: #1a1a1a;
   border-radius: 12px;
   padding: 15px;
@@ -139,7 +151,8 @@ body {
 }
 
 .top_rated-image img {
-  width: 150px;
+  width: 230px;
+  height: 250px;
   border-radius: 8px;
 }
 
